packages/wasm/src/tests/snapshots/wasm__tests__tooltip__math_unclosed_paren_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      15
    ],
    "items": 4
  }
]
